kubernetes/traefik-cert-manager/external-services/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.20.10
  ports:
  - name: https
    port: 8006
    targetPort: 8006

# not in use - just as an example
